--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   carousel_slider: ^4.0.0  
   equatable: ^2.0.3
+  flutter_bloc: ^7.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
